# Ruszzer

./: Cargo.toml  README.md
resources/: .gitignore  cgi_decode.c
src/: cli.yaml  main.rs
src/fuzzer/: api.rs  fuzzer.rs  fuzzer_impl.rs  mod.rs  random_fuzzer.rs
src/mutator/: api.rs  mod.rs  random_mutator.rs
src/runner/: api.rs  gcov_binary_runner.rs  mod.rs  program_runner.rs  runner.rs
src/strategy/: api.rs  boosted_greybox_strategy.rs  greybox_strategy.rs  mod.rs  mutation_strategy.rs  random_strategy.rs
