[package]
name = "ruszzer"
version = "0.1.0"
authors = ["BrMtssk <br.mtssk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
wait-timeout = "0.2.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
